recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:1: error: not found: value levels
  if(levels!=0)
     ^Sierpinski:3: error: not enough arguments for method sierpinski: (level: Int, length: Double)Unit.
Unspecified value parameters level, length.
    sierpinski()
              ^