recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if(levels!=0)
  {
    sierpinski()
  }
  else
  {
		avance(length);
 		right(120);
    avance(length);
    right(120);
    avance(length);
    right(120);
  }
}